# deb_split

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  run_me_once.sh  translate.sh.in
debian/: changelog  conffiles  control  files
lib/: Makefile.am
po/: LINGUAS  Makefile.am  POTFILES.in  split.po  split.po.old  split_de.po  split_de.po.old  split_en.po  split_en.po.old
src/: Makefile.am  main.c  project.h  version.h
